2nd draft with added font families and fixed alignment

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
 main {
     display: flex;
     width: 850px;
-    background-color: whitesmoke;
     flex-direction: column;
 
 }
@@ -33,6 +32,7 @@ h1 {
 .infoContainer {
     display: flex;
     justify-content: space-around;
+    padding: 0px 20px;
     margin: 15px;
     background-color: #E6E6E6;
 
@@ -40,32 +40,58 @@ h1 {
 
 .infoContainer div {
     height: 324px;
-    margin: 10px;
+    width: 270px;
 }
 
 ul {
-    font: ;
+    font-family: 'Roboto', sans-serif;
     list-style-type: none;
+    line-height: 25px;
     padding: 0;
     margin: 0;
+} 
+
+h3{
+    font-family: 'Yantramanav', sans-serif;
 }
 
 h5 {
-    margin: 2px;
+    margin: 3px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter;
 }
 
 .contact {
     display: flex;
     flex-direction: column;
+    width: 270px;
 }
 
 button{
-    padding: 5px;
+    max-width: 30%;
+    padding: 6px;
+    margin: 5px;
+    border: none;
+    background-color: #4D4D4E;
+    color: white;
+    font-family: 'Yantramanav', sans-serif;
+    font-size: 15px;
+    letter-spacing: 1px;
+
 }
 
 #textBox {
     border: none;
     resize: none;
+    margin: 0px 3px 3px 3px;
+}
+
+textarea {
+    height: 65px;
+}
+
+input {
+    height: 25px;
 }
 
 
